--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Checkout branch
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Clean install dependencies
-      - run: npm ci
+        run: npm ci
 
       - name: Run deploy script
-      - run: sh ./deploy.sh
+        run: sh ./deploy.sh
