--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Clean install dependencies
-        run: npm install
+        run: npm update
+             npm ci
 
       - name: Run deploy script
         run: sh ./deploy.sh
