--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Clean install dependencies
-        run: npm update
-             npm ci
+        run: npm ci
 
       - name: Run deploy script
         run: sh ./deploy.sh
