--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,12 @@ jobs:
       - name: Clean install dependencies
         run: npm install
 
+      - name: Linting...
+        run: npm run lint
+
+      - name: Building...
+        run: npm run build
+
       - name: Run deploy script
         uses: peaceiris/actions-gh-pages@v3.4.0
         with:
