--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Clean install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Linting...
         run: npm run lint
