Action and shell fixes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,6 @@ jobs:
         run: npm run build
 
       - name: Deploying...
-        run: sh ./deploy.sh
+        run: |
+            git config user.name "jh8oh" && git config user.email "ohjiho.ca@gmail.com"
+            sh ./deploy.sh
