--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
 
       - name: Deploying...
         run: |
-            git config user.name "jh8oh" && git config user.email "ohjiho.ca@gmail.com"
+            git config user.name --global "jh8oh" && git config user.email --global "ohjiho.ca@gmail.com"
             sh ./deploy.sh
