--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,4 @@ jobs:
         run: npm run build
 
       - name: Deploying...
-        run: |
-            git config user.name --global "jh8oh" && git config user.email --global "ohjiho.ca@gmail.com"
-            sh ./deploy.sh
+        run: sh ./deploy.sh
