--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
       - name: Building...
         run: npm run build
 
-      - name: Set up github config
-        run: |
-          git config user.name "jh8oh"
-          git config user.email "ohjiho.ca@gmail.com"
-
       - name: Deploying...
-        run: sh ./deploy.sh
+        uses: peaceiris/actions-gh-pages@v3.4.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          cname: ohjiho.dev
+          publish_branch: master
