--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,15 +28,10 @@ jobs:
       - name: Building...
         run: npm run build
 
-      - name: Set up Github credentials
-        uses: oleksiyrudenko/gha-git-credentials@v2-latest
-        with:
-          name: 'jh8oh'
-          email: 'ohjiho.ca@domain.com'
-          token: '${{ secrets.GITHUB_TOKEN }}'
-
       - name: Deploying...
         run: |
+          git config user.email "ohjiho.ca@gmail.com"
+          git config user.name "jh8oh"
           cd dist
           git init
           git add -A
