--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,15 @@ jobs:
         run: npm run build
 
       - name: Deploying...
-        run: |
-          git config user.email "ohjiho.ca@gmail.com"
-          git config user.name "jh8oh"
-          cd dist
-          git init
-          git add -A
-          git commit -m 'Deployment'
-          git push -f git@github.com:jh8oh/jh8oh.github.io.git master
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          cname: ohjiho.dev
+          force_orphan: true
+          user_name: jh8oh
+          user_email: ohjiho.ca@github.com
+          publish_branch: master
 
-
+        env:
+          CI: true
